chore(package.json): update version and name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "learn-starter",
-  "version": "0.1.0",
-  "private": true,
+  "name": "JavaScript Beers",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
