--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "JavaScript Beers",
+  "name": "JavaScript and Beers",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "deploy": "git subtree push --prefix dist origin gh-pages",
+    "deploy": "git subtree push --prefix .next origin gh-pages",
     "deploy-force": "git push origin `git subtree split --prefix dist master`:gh-pages --force"
   },
   "dependencies": {
